# bazel-yarn-workspaces

./: .gitignore  BUILD.bazel  WORKSPACE  package.json  tsconfig-base.json
